--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,16 @@
 
 {% block content %}
     <h1>Homepage</h1>
+    
+    {% if user.is_authenticated %}
+        <p>hi {{user.email}}</p>  
+        <p> <a href="{% url 'logout' %}">Log out</a></p>
+    {% else %}
+        <p> you are not logged in</p>
+        <a href="{% url 'login' %}">Log in</a>
+        <a href="{% url 'signup' %}">Sign up</a>
+    {% endif %}
+  
+        
 {% endblock content %}
     
