--- a/templates/_base.html
+++ b/templates/_base.html
@@ -31,10 +31,21 @@
                     <a class="nav-link text-dark" href="{% url 'about' %}">About</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <ul class="navbar-nav ">
+                
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_logout' %}">Log out</a>
+                    </li>
+                {% else %}  
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'account_login' %}">Log in <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
     <div class="container">
