--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,7 +11,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn bnt-success" type="submit">Sign up</button>
+    <button class="btn btn-success" type="submit">Sign up</button>
 </form>
 
 {% endblock content %}
